--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@ form:hover .form-button button{
         </h1>
         <p>We create the world best Websites. </p>
         <div class="header-buttons">
-          <a href="#">AboutUs</a>
-          <a href="#">Contact</a>
+          <a href="#newsletter">AboutUs</a>
+          <a href="#contactme">Contact</a>
 
         </div>
       </div>
